--- a/starter-code/styles/main.css
+++ b/starter-code/styles/main.css
@@ -348,8 +348,10 @@ h3 {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
-        width: 100%;
+        justify-content: center;
+    }
+    .chat__button:first-of-type{
+        margin-right: 1rem;
     }
 
     .smarter .numerotation__content {
@@ -512,8 +514,9 @@ h3 {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-evenly;
-        width: 100%;
+    }
+    .chat__button:first-of-type{
+        margin-right: 1rem;
     }
 
     .smarter .numerotation__content {
